Create call out updated,Web folder added,Element identifier added

--- a/SAFER_CITY/MOBILE/ANDROID/FORGOT_PASSWORD/ForgotPassword.yaml
+++ b/SAFER_CITY/MOBILE/ANDROID/FORGOT_PASSWORD/ForgotPassword.yaml
@@ -1,37 +1,35 @@
-appId: cert.com.safercity.safercitymobileapp.dev
+appId: com.safercity.SaferCitymobileapp.dev
 ---
-- launchApp:
-    clearState: true
-
-- tapOn: http://10.0.2.2:8081
-
-- assertVisible: 'Safer City (Dev) Runtime version: exposdk:52.0.0'
-- tapOn:
-    point: 92%,42%
-
 - longPressOn: Login
 - assertVisible: Forgot password?
 - tapOn: Forgot password?
-- assertVisible: +27 Phone Number
-- tapOn: Phone Number
-- inputText: 720661687
-- assertVisible:
-    id: sendPasswordResetOTPBtn
+- assertVisible: Enter your email
+- tapOn: Enter your email
+- inputText: mitchelle+14@bridgelabs.design
+- assertVisible: Next
+- tapOn: Next
+
+- assertVisible: Check Email for OTP
+
 - tapOn:
-    id: sendPasswordResetOTPBtn
+    point: 10%,47%
 
-# OTP Verification
-
-- assertVisible: 'Check SMS for OTP' # Ensure the OTP page is visible
-
-- inputText: 'Please enter the country name manually'
-
-# Wait for the user to manually enter the OTP
+# Wait for OTP input field to be visible
 - extendedWaitUntil:
-    visible: 'Verify' # Wait until the "Verify" button is visible
-    timeout: 10000 # Wait for up to 60 seconds
+    visible: "To reset your password please enter the six digit pin sent to your email address."
+    timeout: 120000 # Wait for up to 2 minutes
 
-- assertVisible: 'Verify'
+# Start a timer to detect when the user has stopped typing
+- repeat:
+    while:
+      visible: "Didn't receive the code?" # Adjust this to match the actual identifier
+    commands:
+      - waitForAnimationToEnd
+      - extendedWaitUntil:
+          visible: "Didn't receive the code?"
+          timeout: 5000 # Wait for 5 seconds
+      - assertVisible: "Didn't receive the code?" # Ensure the OTP input is still visible
 
-- tapOn:
-    id: verifyOTPBtn
+# After the user has stopped typing, tap the "Verify" button
+- assertVisible: Verify
+- tapOn: Verify
